Restructure index.html using CSS Flexbox. Create projects.html

--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 </head>
 
 <body>
-  <div class="main">
-    <h2>personal</h2>
-    <h1>website</h1>
-    <!-- <p>INGREDIENTS: Ruby, Rails, Sinatra, ActiveRecord, SQLite3, Postgres, Git, HTML, HAML, CSS, JavaScript, React, Redux</p> -->
-  </div>
-
-  <div class="footer">
-    <div class="footer-top">
-      <p><a href="http://instagram.com/deadnowg2g" target="_blank">dalma boros<span class="trademark">&reg;</span></a></p>
-    </div>
-
-    <div class="footer-bottom">
-      <div class="footer-date">
-        <p>2018</p>
+  <div class="outer-wrap">
+    <div class="content-area">
+      <div class="main-content-area">
+        <h1 class="personal-website">
+          <span class="personal">personal</span>
+          <span class="website">website</span>
+        </h1>
       </div>
-      <div class="footer-details">
-        <div class="stay-cool">
-          <p><a href="#" onclick="hello()">keep cool</a></p>
-        </div>
+      <div class="brand-area">
+        <p>dalma boros<span class="trademark">&reg;</span></p>
       </div>
-    </div>
+    </div> <!-- content-area -->
+    <footer class="site-footer">
+      <div class="year">
+        <p>2019</p>
+      </div>
+      <div class="stay-cool">
+        <p>stay cool</p>
+      </div>
+    </footer>
   </div>
 
 </body>
