Add content and styling to projects.html

--- a/projects.html
+++ b/projects.html
@@ -11,46 +11,94 @@
 </head>
 
 <body>
-  <div class="main">
-    <!-- <h2>why yellow?</h2>
-    <p>Canadians need no introduction to <a href="https://www.google.com/search?q=no+name+brand&oq=no+name&aqs=chrome.0.69i59j69i57j69i60l2j0l2.1063j1j7&sourceid=chrome&ie=UTF-8" target="_blank"><strong>no name</strong></a> brand, but I invite American visitors to my website to familiarize themselves with this iconic North-of-the-border household staple to better understand the nostalgia imbued in my design choice. Also, yellow is good for my solar plexus chakra. -->
+  <div class="outer-wrap">
+    <div class="content-area">
+      <div class="main-content-area">
+        <div class="projects-container">
+          <div class="projects-header">
+            <h2>Portfolio Projects</h2>
+            <p>Per 1 Flatiron School Student</p>
+          </div>
+          <div class="portfolio-projects">
+            <div class="portfolio-project-amounts">
+              <p>Git Commits</p>
+              <p>% through curriculum</p>
+            </div>
 
-    <h2>my work</h2>
-    <p><strong>House Floor Bills</strong></p>
-    A command line application that lists this week's schedule of U.S. legislative bills
-    - demo
-    - website
+            <div class="portfolio-project">
+              <div class="portfolio-project-title">
+                <p class="portfolio-title">Bowls <span class="git-commits">293</span></p>
+                <p class="percentage">75 %</p>
+              </div>
+              <div class="portfolio-project-links">
+                <p>Demo 1:51 s</p>
+                <p>Website</p>
+              </div>
+            </div> <!-- portfolio-project -->
+            <div class="portfolio-project">
+              <div class="portfolio-project-title">
+                <p class="portfolio-title">Sickbay <span class="git-commits">231</span></p>
+                <p class="percentage">50 %</p>
+              </div>
+              <div class="portfolio-project-links">
+                <p>Demo 4:28 s</p>
+                <p>Website</p>
+              </div>
+            </div> <!-- portfolio-project -->
+            <div class="portfolio-project">
+              <div class="portfolio-project-title">
+                <p class="portfolio-title">House Floor Bills <span class="git-commits">48</span></p>
+                <p class="percentage">25 %</p>
+              </div>
+              <div class="portfolio-project-links">
+                <p>Demo 1:43 s</p>
+                <p>Ruby Gem Page</p>
+              </div>
+            </div> <!-- portfolio-project -->
+          </div> <!-- portfolio-projects -->
 
-    <p><strong>Sickbay</strong></p>
-    A content management system and event listings for a (now defunct) series of local concerts
-    - demo
-    - website (credentials)
+          <div class="side-projects">
+            <div class="side-project">
+                <p>Rainbow Keyboard</p>
+                <p>0 %</p>
+            </div> <!-- side-project -->
+            <div class="side-project">
+                <p>Codepen</p>
+                <p>0 %</p>
+            </div> <!-- side-project -->
+            <div class="side-project">
+                <p>Blog</p>
+                <p>0 %</p>
+            </div> <!-- side-project -->
+          </div> <!-- side-projects -->
+        </div> <!-- portfolio-projects-container -->
 
-    <p><strong>Bowls</strong></p>
-    A digital idea jar for storing and randomly retrieving ideas and activities
-    - demo
-    - website
+        <div class="satisfaction-guaranteed">
+          <p>Your complete satisfaction with all my projects is guaranteed.
+            If you have any questions or concerns, please contact me.<br />
+            ✉ dalma.boros@gmail.com</p>
+        </div>
 
-    <p><strong>Rainbow Keyboard</strong></p>
-    An experimental word processor that replaces letters with colored dots
-    Rainbow keyboard
-  </div>
+        <div class="ingredients">
+          <p><strong>Ingredients:</strong> HTML5, CSS3, Flexbox,
+            JavaScript (ECMAScript 5), JQuery, JSON, Ruby, Ruby on Rails,
+            SQL, SQLite3, Postgres, OOP, ORM, ActiveRecord, Rack, Sinatra,
+            React, Redux, Git, Nokogiri, OpenURI, Postman, A Little Jeuje.</p>
+        </div>
+      </div> <!-- main-content-area -->
 
-  <div class="footer">
-    <div class="footer-top">
-      <p><a href="mailto:dalma.boros@gmail.com" target="_blank">dalma boros<span class="trademark">&reg;</span></a></p>
-    </div>
-
-    <div class="footer-bottom">
-      <div class="footer-date">
+      <div class="brand-area">
+        <p>dalma boros<span class="trademark">&reg;</span></p>
+      </div>
+    </div> <!-- content-area -->
+    <footer class="site-footer">
+      <div class="year">
         <p>2019</p>
       </div>
-      <div class="footer-details">
-        <div class="stay-cool">
-          <p><a href="#" onclick="hello()">keep cool</a></p>
-        </div>
+      <div class="stay-cool">
+        <p>stay cool</p>
       </div>
-    </div>
+    </footer>
   </div>
 
 </body>
