Add font-awesome envelope icon, move site brand to footer, refine styling

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="keywords" content="dalma, dalma boros, boros" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   <script src="js/hello.js" type="text/javascript"></script>
@@ -72,13 +73,15 @@
             </div> <!-- side-project -->
           </div> <!-- side-projects -->
         </div> <!-- portfolio-projects-container -->
-
         <div class="satisfaction-guaranteed">
-          <p>Your complete satisfaction with all my projects is guaranteed.
+          <p>
+            Your complete satisfaction with all my projects is guaranteed.
             If you have any questions or concerns, please contact me.<br />
-            ✉ dalma.boros@gmail.com</p>
+            <a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank" class="email">
+              <i class="fas fa-envelope"></i> dalma.boros@gmail.com
+            </a>
+          </p>
         </div>
-
         <div class="ingredients">
           <p><strong>Ingredients:</strong> HTML5, CSS3, Flexbox,
             JavaScript (ECMAScript 5), JQuery, JSON, Ruby, Ruby on Rails,
@@ -87,16 +90,18 @@
         </div>
       </div> <!-- main-content-area -->
 
-      <div class="brand-area">
-        <p>dalma boros<span class="trademark">&reg;</span></p>
-      </div>
     </div> <!-- content-area -->
     <footer class="site-footer">
-      <div class="year">
-        <p>2019</p>
+      <div class="footer-brand">
+        <p><a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank">dalma boros</a><span class="trademark">&reg;</span></p>
       </div>
-      <div class="stay-cool">
-        <p>stay cool</p>
+      <div class="footer-info">
+        <div class="year">
+          <p>2019</p>
+        </div>
+        <div class="stay-cool">
+          <p>stay cool</p>
+        </div>
       </div>
     </footer>
   </div>
