--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="keywords" content="dalma, dalma boros, boros" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   <script src="js/hello.js" type="text/javascript"></script>
@@ -15,20 +16,25 @@
     <div class="content-area">
       <div class="main-content-area">
         <h1 class="personal-website">
-          <span class="personal">personal</span>
-          <span class="website">website</span>
+          <a href="projects.html">
+            <span class="personal">personal</span>
+            <span class="website">website</span>
+          </a>
         </h1>
       </div>
-      <div class="brand-area">
-        <p>dalma boros<span class="trademark">&reg;</span></p>
-      </div>
+
     </div> <!-- content-area -->
     <footer class="site-footer">
-      <div class="year">
-        <p>2019</p>
+      <div class="footer-brand">
+        <p><a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank">dalma boros</a><span class="trademark">&reg;</span></p>
       </div>
-      <div class="stay-cool">
-        <p>stay cool</p>
+      <div class="footer-info">
+        <div class="year">
+          <p>2019</p>
+        </div>
+        <div class="stay-cool">
+          <p>stay cool</p>
+        </div>
       </div>
     </footer>
   </div>
