Media query styling on ingredients div

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="outer-wrap">
     <div class="content-area">
-      <div class="main-content-area">
+      <div class="main-content-area #index-page">
         <h1 class="personal-website">
           <a href="projects.html">
             <span class="personal">personal</span>
