--- a/projects.html
+++ b/projects.html
@@ -14,73 +14,75 @@
 <body>
   <div class="outer-wrap">
     <div class="content-area">
-      <div class="main-content-area">
-        <div class="projects-container">
-          <div class="projects-header">
-            <h2>Portfolio Projects</h2>
-            <p>Per 1 Flatiron School Student</p>
-          </div>
-          <div class="portfolio-projects">
-            <div class="portfolio-project-amounts">
-              <p>Git Commits</p>
-              <p>% through curriculum</p>
+      <div class="main-content-area projects-page">
+        <div class="projects-and-guarantee">
+          <div class="projects-container">
+            <div class="projects-header">
+              <h2>Portfolio Projects</h2>
+              <p>Per 1 Flatiron School Student</p>
             </div>
+            <div class="portfolio-projects">
+              <div class="portfolio-project-amounts">
+                <p>Git Commits</p>
+                <p>% through curriculum</p>
+              </div>
 
-            <div class="portfolio-project">
-              <div class="portfolio-project-title">
-                <p class="portfolio-title">Bowls <span class="git-commits">293</span></p>
-                <p class="percentage">75 %</p>
-              </div>
-              <div class="portfolio-project-links">
-                <p>Demo 1:51 s</p>
-                <p>Website</p>
-              </div>
-            </div> <!-- portfolio-project -->
-            <div class="portfolio-project">
-              <div class="portfolio-project-title">
-                <p class="portfolio-title">Sickbay <span class="git-commits">231</span></p>
-                <p class="percentage">50 %</p>
-              </div>
-              <div class="portfolio-project-links">
-                <p>Demo 4:28 s</p>
-                <p>Website</p>
-              </div>
-            </div> <!-- portfolio-project -->
-            <div class="portfolio-project">
-              <div class="portfolio-project-title">
-                <p class="portfolio-title">House Floor Bills <span class="git-commits">48</span></p>
-                <p class="percentage">25 %</p>
-              </div>
-              <div class="portfolio-project-links">
-                <p>Demo 1:43 s</p>
-                <p>Ruby Gem Page</p>
-              </div>
-            </div> <!-- portfolio-project -->
-          </div> <!-- portfolio-projects -->
+              <div class="portfolio-project">
+                <div class="portfolio-project-title">
+                  <p class="portfolio-title">Bowls <span class="git-commits">293</span></p>
+                  <p class="percentage">75 %</p>
+                </div>
+                <div class="portfolio-project-links">
+                  <p>Demo 1:51 s</p>
+                  <p>Website</p>
+                </div>
+              </div> <!-- portfolio-project -->
+              <div class="portfolio-project">
+                <div class="portfolio-project-title">
+                  <p class="portfolio-title">Sickbay <span class="git-commits">231</span></p>
+                  <p class="percentage">50 %</p>
+                </div>
+                <div class="portfolio-project-links">
+                  <p>Demo 4:28 s</p>
+                  <p>Website</p>
+                </div>
+              </div> <!-- portfolio-project -->
+              <div class="portfolio-project">
+                <div class="portfolio-project-title">
+                  <p class="portfolio-title">House Floor Bills <span class="git-commits">48</span></p>
+                  <p class="percentage">25 %</p>
+                </div>
+                <div class="portfolio-project-links">
+                  <p>Demo 1:43 s</p>
+                  <p>Ruby Gem Page</p>
+                </div>
+              </div> <!-- portfolio-project -->
+            </div> <!-- portfolio-projects -->
 
-          <div class="side-projects">
-            <div class="side-project">
+            <div class="side-projects">
+              <div class="side-project">
                 <p>Rainbow Keyboard</p>
                 <p>0 %</p>
-            </div> <!-- side-project -->
-            <div class="side-project">
+              </div> <!-- side-project -->
+              <div class="side-project">
                 <p>Codepen</p>
                 <p>0 %</p>
-            </div> <!-- side-project -->
-            <div class="side-project">
+              </div> <!-- side-project -->
+              <div class="side-project">
                 <p>Blog</p>
                 <p>0 %</p>
-            </div> <!-- side-project -->
-          </div> <!-- side-projects -->
-        </div> <!-- portfolio-projects-container -->
-        <div class="satisfaction-guaranteed">
-          <p>
-            Your complete satisfaction with all my projects is guaranteed.
-            If you have any questions or concerns, please contact me.<br />
-            <a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank" class="email">
-              <i class="fas fa-envelope"></i> dalma.boros@gmail.com
-            </a>
-          </p>
+              </div> <!-- side-project -->
+            </div> <!-- side-projects -->
+          </div> <!-- portfolio-projects-container -->
+          <div class="satisfaction-guaranteed">
+            <p>
+              Your complete satisfaction with all my projects is guaranteed.
+              If you have any questions or concerns, please contact me.<br />
+              <a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank" class="email">
+                <i class="fas fa-envelope"></i> dalma.boros@gmail.com
+              </a>
+            </p>
+          </div>
         </div>
         <div class="ingredients">
           <p><strong>Ingredients:</strong> HTML5, CSS3, Flexbox,
