Add links to projects.html, change email subject line in mailto links

--- a/projects.html
+++ b/projects.html
@@ -29,47 +29,74 @@
 
               <div class="portfolio-project">
                 <div class="portfolio-project-title">
-                  <p class="portfolio-title">Bowls <span class="git-commits">293</span></p>
+                  <p class="portfolio-title">
+                    <a href="https://github.com/dalmaboros/bowls-jquery" target="_blank">
+                      Bowls <span class="git-commits">293</span></p>
+                    </a>
                   <p class="percentage">75 %</p>
                 </div>
                 <div class="portfolio-project-links">
-                  <p>Demo 1:51 s</p>
-                  <p>Website</p>
+                  <p><a href="https://www.youtube.com/watch?v=pTkqv5MzIBU" target="_blank">
+                    Demo 1:51 s
+                  </a></p>
+                  <p><a href="https://safe-mesa-97758.herokuapp.com/" target="_blank">
+                    Website
+                  </a></p>
                 </div>
               </div> <!-- portfolio-project -->
               <div class="portfolio-project">
                 <div class="portfolio-project-title">
-                  <p class="portfolio-title">Sickbay <span class="git-commits">231</span></p>
+                  <p class="portfolio-title">
+                    <a href="https://github.com/dalmaboros/sickbay-shows" target="_blank">
+                      Sickbay <span class="git-commits">231</span></p>
+                    </a>
                   <p class="percentage">50 %</p>
                 </div>
                 <div class="portfolio-project-links">
-                  <p>Demo 4:28 s</p>
-                  <p>Website</p>
+                  <p><a href="https://www.youtube.com/watch?v=QB-sK-UujMI" target="_blank">
+                    Demo 4:28 s
+                  </a></p>
+                  <p><a href="https://floating-headland-25735.herokuapp.com/" target="_blank">
+                    Website
+                  </a></p>
                 </div>
               </div> <!-- portfolio-project -->
               <div class="portfolio-project">
                 <div class="portfolio-project-title">
-                  <p class="portfolio-title">House Floor Bills <span class="git-commits">48</span></p>
+                  <p class="portfolio-title">
+                    <a href="https://github.com/dalmaboros/house-floor-bills-cli-gem" target="_blank">
+                      House Floor Bills <span class="git-commits">48</span></p>
+                    </a>
                   <p class="percentage">25 %</p>
                 </div>
                 <div class="portfolio-project-links">
-                  <p>Demo 1:43 s</p>
-                  <p>Ruby Gem Page</p>
+                  <p><a href="https://www.youtube.com/watch?v=6LL6yv0-u-4" target="_blank">
+                    Demo 1:43 s
+                  </a></p>
+                  <p><a href="https://rubygems.org/gems/house_floor_bills" target="_blank">
+                    Ruby Gem Page
+                  </a></p>
                 </div>
               </div> <!-- portfolio-project -->
             </div> <!-- portfolio-projects -->
 
             <div class="side-projects">
               <div class="side-project">
-                <p>Rainbow Keyboard</p>
+                <p><a href="keyboard.html" target="_blank">
+                  Rainbow Keyboard
+                </a></p>
                 <p>0 %</p>
               </div> <!-- side-project -->
               <div class="side-project">
-                <p>Codepen</p>
+                <p><a href="https://codepen.io/dalmaboros/" target="_blank">
+                  Codepen
+                </a></p>
                 <p>0 %</p>
               </div> <!-- side-project -->
               <div class="side-project">
-                <p>Blog</p>
+                <p><a href="https://dalmaboros.github.io/" target="_blank">
+                  Blog
+                </a></p>
                 <p>0 %</p>
               </div> <!-- side-project -->
             </div> <!-- side-projects -->
@@ -78,7 +105,7 @@
             <p>
               Your complete satisfaction with all my projects is guaranteed.
               If you have any questions or concerns, please contact me.<br />
-              <a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank" class="email">
+              <a href="mailto:dalma.boros@gmail.com?subject=Wow, I love your website" target="_blank" class="email">
                 <i class="fas fa-envelope"></i> dalma.boros@gmail.com
               </a>
             </p>
