--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div> <!-- content-area -->
     <footer class="site-footer">
       <div class="footer-brand">
-        <p><a href="mailto:dalma.boros@gmail.com?subject=Wow, cool website" target="_blank">dalma boros</a><span class="trademark">&reg;</span></p>
+        <p><a href="mailto:dalma.boros@gmail.com?subject=Wow, I love your website" target="_blank">dalma boros</a><span class="trademark">&reg;</span></p>
       </div>
       <div class="footer-info">
         <div class="year">
