--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
       min-height: 420px;
       height: 100%;
     }
+    .main-content-area {
+      align-self: flex-start;
+    }
+    .content-area {
+      padding-left: 3em;
+    }
+    @media screen and (min-width: 716px) {
+      .content-area {
+        padding-left: 4em;
+      }
+    }
   </style>
   <script src="js/hello.js" type="text/javascript"></script>
 </head>
