--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       height: 100%;
     }
     .main-content-area {
-      align-self: flex-start;
+      -ms-flex-item-align: start;
+          align-self: flex-start;
     }
     .content-area {
       padding-left: 3em;
