Change order of links on projects.html

--- a/projects.html
+++ b/projects.html
@@ -23,15 +23,15 @@
             </div>
             <div class="portfolio-projects">
               <div class="portfolio-project-amounts">
-                <p>Git Commits</p>
+                <p>Project</p>
                 <p>% through curriculum</p>
               </div>
 
               <div class="portfolio-project">
                 <div class="portfolio-project-title">
                   <p class="portfolio-title">
-                    <a href="https://github.com/dalmaboros/bowls-jquery" target="_blank">
-                      Bowls <span class="git-commits">293</span></p>
+                    <a href="https://safe-mesa-97758.herokuapp.com/" target="_blank">
+                      Bowls</p>
                     </a>
                   <p class="percentage">75 %</p>
                 </div>
@@ -39,16 +39,16 @@
                   <p><a href="https://www.youtube.com/watch?v=pTkqv5MzIBU" target="_blank">
                     Demo 1:51 s
                   </a></p>
-                  <p><a href="https://safe-mesa-97758.herokuapp.com/" target="_blank">
-                    Website
+                  <p><a href="https://github.com/dalmaboros/bowls-jquery" target="_blank">
+                    GitHub 293
                   </a></p>
                 </div>
               </div> <!-- portfolio-project -->
               <div class="portfolio-project">
                 <div class="portfolio-project-title">
                   <p class="portfolio-title">
-                    <a href="https://github.com/dalmaboros/sickbay-shows" target="_blank">
-                      Sickbay <span class="git-commits">231</span></p>
+                    <a href="https://floating-headland-25735.herokuapp.com/" target="_blank">
+                      Sickbay</p>
                     </a>
                   <p class="percentage">50 %</p>
                 </div>
@@ -56,16 +56,16 @@
                   <p><a href="https://www.youtube.com/watch?v=QB-sK-UujMI" target="_blank">
                     Demo 4:28 s
                   </a></p>
-                  <p><a href="https://floating-headland-25735.herokuapp.com/" target="_blank">
-                    Website
+                  <p><a href="https://github.com/dalmaboros/sickbay-shows" target="_blank">
+                    GitHub 231
                   </a></p>
                 </div>
               </div> <!-- portfolio-project -->
               <div class="portfolio-project">
                 <div class="portfolio-project-title">
                   <p class="portfolio-title">
-                    <a href="https://github.com/dalmaboros/house-floor-bills-cli-gem" target="_blank">
-                      House Floor Bills <span class="git-commits">48</span></p>
+                    <a href="https://rubygems.org/gems/house_floor_bills" target="_blank">
+                      House Floor Bills</p>
                     </a>
                   <p class="percentage">25 %</p>
                 </div>
@@ -73,8 +73,8 @@
                   <p><a href="https://www.youtube.com/watch?v=6LL6yv0-u-4" target="_blank">
                     Demo 1:43 s
                   </a></p>
-                  <p><a href="https://rubygems.org/gems/house_floor_bills" target="_blank">
-                    Ruby Gem Page
+                  <p><a href="https://github.com/dalmaboros/house-floor-bills-cli-gem" target="_blank">
+                    GitHub 48
                   </a></p>
                 </div>
               </div> <!-- portfolio-project -->
