Add framework to project listing in projects.html

--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,9 @@
                 <div class="portfolio-project-title">
                   <p class="portfolio-title">
                     <a href="https://safe-mesa-97758.herokuapp.com/" target="_blank">
-                      Bowls</p>
+                      Bowls <span class="framework">Rails / JS</span>
                     </a>
+                  </p>
                   <p class="percentage">75 %</p>
                 </div>
                 <div class="portfolio-project-links">
@@ -48,8 +49,9 @@
                 <div class="portfolio-project-title">
                   <p class="portfolio-title">
                     <a href="https://floating-headland-25735.herokuapp.com/" target="_blank">
-                      Sickbay</p>
+                      Sickbay <span class="framework">Sinatra</span>
                     </a>
+                  </p>
                   <p class="percentage">50 %</p>
                 </div>
                 <div class="portfolio-project-links">
@@ -65,8 +67,9 @@
                 <div class="portfolio-project-title">
                   <p class="portfolio-title">
                     <a href="https://rubygems.org/gems/house_floor_bills" target="_blank">
-                      House Floor Bills</p>
+                      House Floor Bills <span class="framework">Ruby</span>
                     </a>
+                  </p>
                   <p class="percentage">25 %</p>
                 </div>
                 <div class="portfolio-project-links">
