Change brand link from mailto to index page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div> <!-- content-area -->
     <footer class="site-footer">
       <div class="footer-brand">
-        <p><a href="mailto:dalma.boros@gmail.com?subject=Wow, I love your website" target="_blank">dalma boros</a><span class="trademark">&reg;</span></p>
+        <p><a href="http://www.dalmaboros.com">dalma boros</a><span class="trademark">&reg;</span></p>
       </div>
       <div class="footer-info">
         <div class="year">
