--- a/projects.html
+++ b/projects.html
@@ -116,10 +116,7 @@
           </div>
         </div>
         <div class="ingredients">
-          <p><strong>Ingredients:</strong> HTML5, CSS3, Flexbox,
-            JavaScript (ECMAScript 5), JQuery, JSON, Ruby, Ruby on Rails,
-            SQL, SQLite3, Postgres, OOP, ORM, ActiveRecord, Rack, Sinatra,
-            React, Redux, Git, Nokogiri, OpenURI, Postman, A Little Jeuje.</p>
+          <p><strong>Ingredients:</strong>Ruby, Rails, Python, Flask, Angular, React, Redux, HTML, CSS, JavaScript, JQuery, SQL</p>
         </div>
       </div> <!-- main-content-area -->
 
