--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
           <div class="projects-container">
             <div class="projects-header">
               <h2>Portfolio Projects</h2>
-              <p>Per 1 Flatiron School Student</p>
+              <p>Per 1 Flatiron Graduate</p>
             </div>
             <div class="portfolio-projects">
               <div class="portfolio-project-amounts">
