--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="ingredients">
-          <p><strong>Ingredients:</strong>Ruby, Rails, Python, Flask, Angular, React, Redux, HTML, CSS, JavaScript, JQuery, SQL</p>
+          <p><strong>Ingredients:</strong>Ruby, Rails, React, Redux, Python, Flask, Angular, TypeScript, JavaScript, Docker, SQL, HTML, CSS</p>
         </div>
       </div> <!-- main-content-area -->
 
