--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="ingredients">
-          <p><strong>Ingredients:</strong>Ruby, Rails, React, Redux, Python, Flask, Angular, TypeScript, JavaScript, Docker, SQL, HTML, CSS</p>
+          <p><strong>Ingredients:</strong>Ruby, Python, Rails, React, Redux, Angular, TypeScript, JavaScript (ES6), HTML5, CSS3, SQL, Docker, Kubernetes</p>
         </div>
       </div> <!-- main-content-area -->
 
