--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,20 @@
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   <title>dalma boros</title>
+  <style>
+    html, body {
+      height: 100%;
+    }
+    .outer-wrap {
+      min-height: 420px;
+      height: 100%;
+    }
+    .main-content-area {
+      -ms-flex-item-align: start;
+          align-self: flex-start;
+    }
+    
+  </style>
   <script src="js/hello.js" type="text/javascript"></script>
 </head>
 
@@ -116,7 +130,10 @@
           </div>
         </div>
         <div class="ingredients">
-          <p><strong>Ingredients:</strong>Ruby, Python, Rails, React, Redux, Angular, TypeScript, JavaScript (ES6), HTML5, CSS3, SQL, Docker, Kubernetes</p>
+          <p>
+            <strong>Ingredients: </strong>
+            Ruby, Python, C#, ASP.NET, Rails, React, Redux, Angular, TypeScript, JavaScript, HTML5, CSS3, SQL, Docker, Kubernetes, Jenkins
+          </p>
         </div>
       </div> <!-- main-content-area -->
 
