--- a/projects.html
+++ b/projects.html
@@ -1,158 +1,172 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="keywords" content="dalma, dalma boros, boros" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
-  <title>dalma boros</title>
-  <style>
-    html, body {
-      height: 100%;
-    }
-    .outer-wrap {
-      min-height: 420px;
-      height: 100%;
-    }
-    .main-content-area {
-      -ms-flex-item-align: start;
-          align-self: flex-start;
-    }
-    
-  </style>
-  <script src="js/hello.js" type="text/javascript"></script>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="keywords" content="dalma, dalma boros, boros" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <title>dalma boros</title>
+    <style>
+      html, body {
+        height: 100%;
+      }
+      .outer-wrap {
+        min-height: 420px;
+        height: 100%;
+      }
+      .main-content-area {
+        -ms-flex-item-align: start;
+            align-self: flex-start;
+      }
+      
+    </style>
+    <script src="js/hello.js" type="text/javascript"></script>
+  </head>
 
-<body>
-  <div class="outer-wrap">
-    <div class="content-area">
-      <div class="main-content-area projects-page">
-        <div class="projects-and-guarantee">
-          <div class="projects-container">
-            <div class="projects-header">
-              <h2>Portfolio Projects</h2>
-              <p>Per 1 Flatiron Graduate</p>
-            </div>
-            <div class="portfolio-projects">
-              <div class="portfolio-project-amounts">
-                <p>Project</p>
-                <p>% through curriculum</p>
+  <body>
+    <div class="outer-wrap">
+      <div class="content-area">
+        <div class="main-content-area projects-page">
+          <div class="projects-and-guarantee">
+            <div class="projects-container">
+              <div class="projects-header">
+                <h2>Portfolio Projects</h2>
+                <p>Per 1 Flatiron School Graduate</p>
               </div>
+              <div class="portfolio-projects">
+                <div class="portfolio-project-amounts">
+                  <p>Project</p>
+                  <p>% through curriculum</p>
+                </div>
 
-              <div class="portfolio-project">
-                <div class="portfolio-project-title">
-                  <p class="portfolio-title">
-                    <a href="https://safe-mesa-97758.herokuapp.com/" target="_blank">
-                      Bowls <span class="framework">Rails / JS</span>
-                    </a>
-                  </p>
-                  <p class="percentage">75 %</p>
-                </div>
-                <div class="portfolio-project-links">
-                  <p><a href="https://www.youtube.com/watch?v=pTkqv5MzIBU" target="_blank">
-                    Demo 1:51 s
-                  </a></p>
-                  <p><a href="https://github.com/dalmaboros/bowls-jquery" target="_blank">
-                    GitHub 300
-                  </a></p>
-                </div>
-              </div> <!-- portfolio-project -->
-              <div class="portfolio-project">
-                <div class="portfolio-project-title">
-                  <p class="portfolio-title">
-                    <a href="https://floating-headland-25735.herokuapp.com/" target="_blank">
-                      Sickbay <span class="framework">Sinatra</span>
-                    </a>
-                  </p>
-                  <p class="percentage">50 %</p>
-                </div>
-                <div class="portfolio-project-links">
-                  <p><a href="https://www.youtube.com/watch?v=QB-sK-UujMI" target="_blank">
-                    Demo 4:28 s
-                  </a></p>
-                  <p><a href="https://github.com/dalmaboros/sickbay-shows" target="_blank">
-                    GitHub 231
-                  </a></p>
-                </div>
-              </div> <!-- portfolio-project -->
-              <div class="portfolio-project">
-                <div class="portfolio-project-title">
-                  <p class="portfolio-title">
-                    <a href="https://rubygems.org/gems/house_floor_bills" target="_blank">
-                      House Floor Bills <span class="framework">Ruby</span>
-                    </a>
-                  </p>
-                  <p class="percentage">25 %</p>
-                </div>
-                <div class="portfolio-project-links">
-                  <p><a href="https://www.youtube.com/watch?v=6LL6yv0-u-4" target="_blank">
-                    Demo 1:43 s
-                  </a></p>
-                  <p><a href="https://github.com/dalmaboros/house-floor-bills-cli-gem" target="_blank">
-                    GitHub 48
-                  </a></p>
-                </div>
-              </div> <!-- portfolio-project -->
-            </div> <!-- portfolio-projects -->
+                <div class="portfolio-project">
+                  <div class="portfolio-project-title">
+                    <p class="portfolio-title">
+                      Cher's Wardrobe <span class="framework">Rails / React</span>
+                    </p>
+                    <p class="percentage">100 %</p>
+                  </div>
+                  <div class="portfolio-project-links">
+                    <p><a href="https://youtu.be/RJT1I_aaB38" target="_blank">
+                      Demo 1:13 s
+                    </a></p>
+                    <p><a href="https://github.com/dalmaboros/chers-wardrobe" target="_blank">
+                      GitHub
+                    </a></p>
+                  </div>
+                </div> <!-- portfolio-project -->
+                <div class="portfolio-project">
+                  <div class="portfolio-project-title">
+                    <p class="portfolio-title">
+                      <a href="https://safe-mesa-97758.herokuapp.com/" target="_blank">
+                        Bowls <span class="framework">Rails / JS</span>
+                      </a>
+                    </p>
+                    <p class="percentage">75 %</p>
+                  </div>
+                  <div class="portfolio-project-links">
+                    <p><a href="https://www.youtube.com/watch?v=pTkqv5MzIBU" target="_blank">
+                      Demo 1:51 s
+                    </a></p>
+                    <p><a href="https://github.com/dalmaboros/bowls-jquery" target="_blank">
+                      GitHub
+                    </a></p>
+                  </div>
+                </div> <!-- portfolio-project -->
+                <div class="portfolio-project">
+                  <div class="portfolio-project-title">
+                    <p class="portfolio-title">
+                      <a href="https://floating-headland-25735.herokuapp.com/" target="_blank">
+                        Sickbay <span class="framework">Sinatra</span>
+                      </a>
+                    </p>
+                    <p class="percentage">50 %</p>
+                  </div>
+                  <div class="portfolio-project-links">
+                    <p><a href="https://www.youtube.com/watch?v=QB-sK-UujMI" target="_blank">
+                      Demo 4:28 s
+                    </a></p>
+                    <p><a href="https://github.com/dalmaboros/sickbay-shows" target="_blank">
+                      GitHub
+                    </a></p>
+                  </div>
+                </div> <!-- portfolio-project -->
+                <div class="portfolio-project">
+                  <div class="portfolio-project-title">
+                    <p class="portfolio-title">
+                      <a href="https://rubygems.org/gems/house_floor_bills" target="_blank">
+                        House Floor Bills <span class="framework">Ruby</span>
+                      </a>
+                    </p>
+                    <p class="percentage">25 %</p>
+                  </div>
+                  <div class="portfolio-project-links">
+                    <p><a href="https://www.youtube.com/watch?v=6LL6yv0-u-4" target="_blank">
+                      Demo 1:43 s
+                    </a></p>
+                    <p><a href="https://github.com/dalmaboros/house-floor-bills-cli-gem" target="_blank">
+                      GitHub
+                    </a></p>
+                  </div>
+                </div> <!-- portfolio-project -->
+              </div> <!-- portfolio-projects -->
 
-            <div class="side-projects">
-              <div class="side-project">
-                <p><a href="keyboard.html" target="_blank">
-                  Rainbow Keyboard
-                </a></p>
-                <p>0 %</p>
-              </div> <!-- side-project -->
-              <div class="side-project">
-                <p><a href="https://codepen.io/dalmaboros/" target="_blank">
-                  Codepen
-                </a></p>
-                <p>0 %</p>
-              </div> <!-- side-project -->
-              <div class="side-project">
-                <p><a href="https://dalmaboros.github.io/" target="_blank">
-                  Blog
-                </a></p>
-                <p>0 %</p>
-              </div> <!-- side-project -->
-            </div> <!-- side-projects -->
-          </div> <!-- portfolio-projects-container -->
-          <div class="satisfaction-guaranteed">
+              <div class="side-projects">
+                <div class="side-project">
+                  <p><a href="keyboard.html" target="_blank">
+                    Rainbow Keyboard
+                  </a></p>
+                  <p>0 %</p>
+                </div> <!-- side-project -->
+                <div class="side-project">
+                  <p><a href="https://codepen.io/dalmaboros/" target="_blank">
+                    Codepen
+                  </a></p>
+                  <p>0 %</p>
+                </div> <!-- side-project -->
+                <div class="side-project">
+                  <p><a href="https://dalmaboros.github.io/" target="_blank">
+                    Blog
+                  </a></p>
+                  <p>0 %</p>
+                </div> <!-- side-project -->
+              </div> <!-- side-projects -->
+            </div> <!-- portfolio-projects-container -->
+            <div class="satisfaction-guaranteed">
+              <p>
+                Your complete satisfaction with all my projects is guaranteed.
+                If you have any questions or concerns, please contact me.<br />
+                <a href="mailto:dalma.boros@gmail.com" target="_blank" class="email">
+                  <i class="fas fa-envelope"></i> dalma.boros@gmail.com
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="ingredients">
             <p>
-              Your complete satisfaction with all my projects is guaranteed.
-              If you have any questions or concerns, please contact me.<br />
-              <a href="mailto:dalma.boros@gmail.com?subject=Wow, I love your website" target="_blank" class="email">
-                <i class="fas fa-envelope"></i> dalma.boros@gmail.com
-              </a>
+              <strong>Ingredients: </strong>
+              Ruby, Rails, React, Redux, Python, C#, ASP.NET, Angular, TypeScript, HTML5, CSS3, JavaScript, SQL, Docker, Kubernetes, Jenkins
             </p>
           </div>
-        </div>
-        <div class="ingredients">
-          <p>
-            <strong>Ingredients: </strong>
-            Ruby, Python, C#, ASP.NET, Rails, React, Redux, Angular, TypeScript, JavaScript, HTML5, CSS3, SQL, Docker, Kubernetes, Jenkins
-          </p>
-        </div>
-      </div> <!-- main-content-area -->
+        </div> <!-- main-content-area -->
 
-    </div> <!-- content-area -->
-    <footer class="site-footer">
-      <div class="footer-brand">
-        <p><a href="http://www.dalmaboros.com">dalma boros</a><span class="trademark">&reg;</span></p>
-      </div>
-      <div class="footer-info">
-        <div class="year">
-          <p>2020</p>
+      </div> <!-- content-area -->
+      <footer class="site-footer">
+        <div class="footer-brand">
+          <p><a href="http://www.dalmaboros.com">dalma boros</a><span class="trademark">&reg;</span></p>
         </div>
-        <div class="stay-cool">
-          <p>stay cool</p>
+        <div class="footer-info">
+          <div class="year">
+            <p>2024</p>
+          </div>
+          <div class="stay-cool">
+            <p>stay cool</p>
+          </div>
         </div>
-      </div>
-    </footer>
-  </div>
-
-</body>
-
+      </footer>
+    </div>
+  </body>
 </html>
