--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
       <footer class="site-footer">
         <div class="footer-brand">
-          <p><a href="http://www.dalmaboros.com">dalma boros</a><span class="trademark">&reg;</span></p>
+          <p><a href="http://www.dalmaboros.com">dalma boros<span class="trademark">&reg;</span></a></p>
         </div>
 
         <div class="footer-info">
           <div class="year">
             <p>2024</p>
           </div>
-          
+
           <div class="stay-cool">
             <p>stay cool</p>
           </div>
