--- a/projects.html
+++ b/projects.html
@@ -36,10 +36,11 @@
                 <h2>Portfolio Projects</h2>
                 <p>Per 1 Flatiron School Graduate</p>
               </div>
+
               <div class="portfolio-projects">
                 <div class="portfolio-project-amounts">
-                  <p>Project</p>
-                  <p>% through curriculum</p>
+                  <p> </p>
+                  <p>% Through Curriculum*</p>
                 </div>
 
                 <div class="portfolio-project">
@@ -49,6 +50,7 @@
                     </p>
                     <p class="percentage">100 %</p>
                   </div>
+
                   <div class="portfolio-project-links">
                     <p><a href="https://youtu.be/RJT1I_aaB38" target="_blank">
                       Demo 1:13 s
@@ -58,6 +60,7 @@
                     </a></p>
                   </div>
                 </div> <!-- portfolio-project -->
+
                 <div class="portfolio-project">
                   <div class="portfolio-project-title">
                     <p class="portfolio-title">
@@ -67,6 +70,7 @@
                     </p>
                     <p class="percentage">75 %</p>
                   </div>
+
                   <div class="portfolio-project-links">
                     <p><a href="https://www.youtube.com/watch?v=pTkqv5MzIBU" target="_blank">
                       Demo 1:51 s
@@ -76,6 +80,7 @@
                     </a></p>
                   </div>
                 </div> <!-- portfolio-project -->
+
                 <div class="portfolio-project">
                   <div class="portfolio-project-title">
                     <p class="portfolio-title">
@@ -85,6 +90,7 @@
                     </p>
                     <p class="percentage">50 %</p>
                   </div>
+
                   <div class="portfolio-project-links">
                     <p><a href="https://www.youtube.com/watch?v=QB-sK-UujMI" target="_blank">
                       Demo 4:28 s
@@ -94,6 +100,7 @@
                     </a></p>
                   </div>
                 </div> <!-- portfolio-project -->
+
                 <div class="portfolio-project">
                   <div class="portfolio-project-title">
                     <p class="portfolio-title">
@@ -103,6 +110,7 @@
                     </p>
                     <p class="percentage">25 %</p>
                   </div>
+
                   <div class="portfolio-project-links">
                     <p><a href="https://www.youtube.com/watch?v=6LL6yv0-u-4" target="_blank">
                       Demo 1:43 s
@@ -116,17 +124,19 @@
 
               <div class="side-projects">
                 <div class="side-project">
-                  <p><a href="keyboard.html" target="_blank">
+                  <p class="rainbow-text"><a href="keyboard.html" target="_blank" class="rainbow-text">
                     Rainbow Keyboard
                   </a></p>
                   <p>0 %</p>
                 </div> <!-- side-project -->
+
                 <div class="side-project">
                   <p><a href="https://codepen.io/dalmaboros/" target="_blank">
                     Codepen
                   </a></p>
                   <p>0 %</p>
                 </div> <!-- side-project -->
+
                 <div class="side-project">
                   <p><a href="https://dalmaboros.github.io/" target="_blank">
                     Blog
@@ -134,6 +144,13 @@
                   <p>0 %</p>
                 </div> <!-- side-project -->
               </div> <!-- side-projects -->
+
+              <div class="projects-footnote">
+                <p>*</p>
+                <p>
+                  The % Through Curriculum (TC) tells you at what point in the Flatiron School curriculum a project was completed.
+                </p>
+              </div>
             </div> <!-- portfolio-projects-container -->
             <div class="satisfaction-guaranteed">
               <p>
@@ -156,7 +173,7 @@
       </div> <!-- content-area -->
       <footer class="site-footer">
         <div class="footer-brand">
-          <p><a href="http://www.dalmaboros.com">dalma boros</a><span class="trademark">&reg;</span></p>
+          <p><a href="http://www.dalmaboros.com">dalma boros<span class="trademark">&reg;</span></a></p>
         </div>
         <div class="footer-info">
           <div class="year">
